--- a/CSS/main.css
+++ b/CSS/main.css
@@ -10,9 +10,6 @@ Div 2= id:"list" class:"page"*/
     line-height: 2rem;
 }
 body{
-    
-    background-image: url(../IMG/gold.jpg);
-    background-size: auto;
     width: 100%;
     background-repeat: no-repeat;
     background-color: whitesmoke;
@@ -51,6 +48,9 @@ body{
     
 }
 .page{
+    background-image: url(../IMG/gold.jpg);
+    background-repeat: no-repeat;
+    background-size: 600px 500px;
     position: absolute;
     width: 100%;
     transform: translateX(-100%);
