--- a/CSS/main.css
+++ b/CSS/main.css
@@ -34,6 +34,7 @@ body{
 .size {
     font-size: 50px;
     color: goldenrod;
+    background-color: whitesmoke;
 }
 #btnSend, #btnBack{
     background-size: contain;
